--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
         <h1>Lotto Number Generator</h1>
         <div id="numbers" class="numbers-container"></div>
         <button id="generate-btn">Generate Numbers</button>
+        <div class="theme-switch-wrapper">
+            <label class="theme-switch" for="checkbox">
+                <input type="checkbox" id="checkbox" />
+                <div class="slider round"></div>
+            </label>
+        </div>
     </div>
     <script src="main.js"></script>
 </body>
