--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
 <body>
     <div class="container">
         <h1>Lotto Number Generator</h1>
+        <div class="game-options">
+            <label for="game-count">Number of Games:</label>
+            <select id="game-count">
+                <option value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+            </select>
+        </div>
         <div id="numbers" class="numbers-container"></div>
         <button id="generate-btn">Generate Numbers</button>
+        <button id="manual-btn">Manual Selection</button>
         <div class="theme-switch-wrapper">
             <label class="theme-switch" for="checkbox">
                 <input type="checkbox" id="checkbox" />
@@ -18,6 +29,16 @@
             </label>
         </div>
     </div>
+
+    <div id="manual-modal" class="modal">
+        <div class="modal-content">
+            <span class="close-btn">&times;</span>
+            <h2>Select 6 Numbers</h2>
+            <div id="manual-numbers" class="manual-numbers-grid"></div>
+            <button id="manual-select-btn">Confirm Selection</button>
+        </div>
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
