feat: Implement individual manual selection for multiple games with separate pop-ups

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <h2 data-lang="manualModalTitle">Select 6 Numbers</h2>
             <div id="manual-numbers" class="manual-numbers-grid"></div>
             <button id="manual-select-btn" data-lang="manualConfirmButton">Confirm Selection</button>
+            <input type="hidden" id="current-game-index" value="-1">
         </div>
     </div>
 
