--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 
         <section class="filters">
             <div class="filter-header">
-                <h3>카테고리</h3>
-                <span class="hint">버튼을 눌러 취향을 좁혀보세요.</span>
+                <div class="filter-title">
+                    <h3>카테고리</h3>
+                    <span class="hint">버튼을 눌러 취향을 좁혀보세요.</span>
+                </div>
+                <button class="btn ghost small" id="ladder-open">사다리 게임</button>
             </div>
             <div class="filter-buttons" id="category-buttons">
                 <button class="chip is-active" data-category="all">전체</button>
@@ -60,6 +63,29 @@
                 <p class="empty-state">아직 저장된 메뉴가 없습니다.</p>
             </div>
         </section>
+    </div>
+
+    <div class="modal" id="ladder-modal" aria-hidden="true" role="dialog" aria-modal="true">
+        <div class="modal-backdrop" data-close="true"></div>
+        <div class="modal-card" role="document">
+            <div class="modal-header">
+                <div>
+                    <span class="badge">MENU LAB</span>
+                    <h3 id="ladder-title">카테고리 사다리 게임</h3>
+                </div>
+                <button class="btn text" id="ladder-close" aria-label="사다리 게임 닫기">닫기</button>
+            </div>
+            <p class="modal-desc" id="ladder-desc">시작 지점을 눌러 메뉴 결과를 확인하세요.</p>
+            <div class="ladder-controls">
+                <button class="btn outline" id="ladder-reroll">사다리 다시 만들기</button>
+            </div>
+            <div class="ladder-board">
+                <div class="ladder-labels ladder-top" id="ladder-top"></div>
+                <canvas id="ladder-canvas" width="640" height="260"></canvas>
+                <div class="ladder-labels ladder-bottom" id="ladder-bottom"></div>
+            </div>
+            <div class="ladder-result" id="ladder-result">결과가 여기에 표시됩니다.</div>
+        </div>
     </div>
 
     <script src="menu.js"></script>
