Turn hero recommendation into slot machine

--- a/index.html
+++ b/index.html
@@ -23,7 +23,17 @@
                     <span class="pill">오늘의 추천</span>
                     <span class="hero-time" id="time-slot">점심</span>
                 </div>
-                <h2 id="menu-title">따뜻한 순두부찌개</h2>
+                <div class="slot-machine" id="slot-machine">
+                    <div class="slot-window" id="slot-window">
+                        <div class="slot-track" id="slot-track">
+                            <h2 id="menu-title">따뜻한 순두부찌개</h2>
+                        </div>
+                    </div>
+                    <div class="slot-fireworks" id="slot-fireworks">
+                        <span></span><span></span><span></span><span></span><span></span><span></span>
+                        <span></span><span></span><span></span><span></span><span></span><span></span>
+                    </div>
+                </div>
                 <p id="menu-desc">칼칼한 국물과 부드러운 두부로 든든하게.</p>
                 <div class="tag-row" id="menu-tags"></div>
                 <div class="hero-card-actions">
