Update categories and slot trigger behavior

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                 <button class="chip" data-category="chinese">중식</button>
                 <button class="chip" data-category="western">양식</button>
                 <button class="chip" data-category="street">분식</button>
+                <button class="chip" data-category="vietnamese">베트남</button>
                 <button class="chip" data-category="dessert">디저트</button>
+                <button class="chip" data-category="fastfood">패스트푸드</button>
             </div>
         </section>
 
