--- a/index.html
+++ b/index.html
@@ -120,6 +120,17 @@
                 <button class="btn text" id="ladder-close" aria-label="사다리 게임 닫기">닫기</button>
             </div>
             <p class="modal-desc" id="ladder-desc">시작 지점을 눌러 메뉴 결과를 확인하세요.</p>
+            <div class="ladder-inputs">
+                <div>
+                    <span>사다리 위(시작)</span>
+                    <textarea id="ladder-top-input" rows="2" placeholder="예: A, B, C"></textarea>
+                </div>
+                <div>
+                    <span>사다리 아래(도착)</span>
+                    <textarea id="ladder-bottom-input" rows="2" placeholder="예: 메뉴1, 메뉴2, 메뉴3"></textarea>
+                </div>
+                <button class="btn ghost small" id="ladder-manual">사다리게임(수동)</button>
+            </div>
             <div class="ladder-controls">
                 <button class="btn outline" id="ladder-reroll">사다리 다시 만들기</button>
             </div>
