--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
                 <button class="chip" data-category="dessert">디저트</button>
                 <button class="chip" data-category="fastfood">패스트푸드</button>
             </div>
+            <div class="filter-actions">
+                <span class="hint">메뉴를 복수 선택한 뒤 포함/제외를 선택하세요.</span>
+                <div class="filter-toggle">
+                    <button class="btn outline is-active" id="include-btn">포함</button>
+                    <button class="btn outline" id="exclude-btn">제외</button>
+                </div>
+            </div>
         </section>
 
         <section class="menu-grid" id="menu-grid"></section>
