Add selection count/reset and persist by category

--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                     <button class="btn outline" id="exclude-btn">제외</button>
                 </div>
             </div>
+            <div class="selection-bar">
+                <span class="hint" id="selection-count">선택 0개</span>
+                <button class="btn text" id="selection-reset">선택 초기화</button>
+            </div>
         </section>
 
         <section class="menu-grid" id="menu-grid"></section>
