--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
         </section>
 
-        <section class="menu-grid" id="menu-grid"></section>
+        <section class="menu-grid is-hidden" id="menu-grid"></section>
 
         <section class="saved">
             <div class="saved-header">
