--- a/index.html
+++ b/index.html
@@ -93,16 +93,18 @@
             <div class="comments-header">
                 <h3>댓글</h3>
                 <span class="hint">디스커스로 의견을 남겨주세요.</span>
+                <button class="btn outline small" id="comments-toggle">댓글 열기</button>
             </div>
-            <div id="disqus_thread"></div>
+            <div id="disqus_thread" class="is-hidden"></div>
         </section>
 
         <section class="partner">
             <div class="partner-header">
                 <h3>제휴 문의</h3>
                 <span class="hint">간단한 정보만 남겨주시면 연락드릴게요.</span>
+                <button class="btn outline small" id="partner-toggle">문의 열기</button>
             </div>
-            <form class="partner-form" id="partner-form" action="https://formspree.io/f/xjggbznp" method="POST">
+            <form class="partner-form is-hidden" id="partner-form" action="https://formspree.io/f/xjggbznp" method="POST">
                 <label>
                     <span>이름</span>
                     <input type="text" name="name" placeholder="담당자 이름" required>
@@ -117,8 +119,8 @@
                 </label>
                 <button class="btn primary span-2" type="submit">제휴 문의 보내기</button>
             </form>
-            <p class="form-note">응답 확인을 위해 이메일을 정확히 입력해 주세요.</p>
-            <p class="partner-status" id="partner-status" role="status" aria-live="polite"></p>
+            <p class="form-note is-hidden">응답 확인을 위해 이메일을 정확히 입력해 주세요.</p>
+            <p class="partner-status is-hidden" id="partner-status" role="status" aria-live="polite"></p>
         </section>
     </div>
 
