Add strategy team menu category

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             </div>
             <div class="filter-buttons" id="category-buttons">
                 <button class="chip is-active" data-category="all">전체</button>
+                <button class="chip" data-category="strategy">전략팀</button>
                 <button class="chip" data-category="korean">한식</button>
                 <button class="chip" data-category="japanese">일식</button>
                 <button class="chip" data-category="chinese">중식</button>
