사다리 게임 수동/자동 흐름 개선

--- a/index.html
+++ b/index.html
@@ -139,25 +139,30 @@
             <div class="ladder-inputs">
                 <div class="ladder-input-group">
                     <div class="ladder-input-header">
-                        <span>사다리 위(시작)</span>
-                        <button class="btn text" type="button" id="ladder-top-add">추가</button>
-                    </div>
-                    <div class="ladder-input-list" id="ladder-top-list">
-                        <input type="text" placeholder="예: A">
-                        <input type="text" placeholder="예: B">
+                        <span>자동 카테고리</span>
+                        <select class="ladder-select" id="ladder-category" aria-label="자동 사다리 카테고리"></select>
                     </div>
                 </div>
                 <div class="ladder-input-group">
                     <div class="ladder-input-header">
-                        <span>사다리 아래(도착)</span>
-                        <button class="btn text" type="button" id="ladder-bottom-add">추가</button>
+                        <span>수동 게임 수</span>
+                        <select class="ladder-select" id="ladder-count" aria-label="수동 사다리 게임 수"></select>
                     </div>
-                    <div class="ladder-input-list" id="ladder-bottom-list">
-                        <input type="text" placeholder="예: 메뉴1">
-                        <input type="text" placeholder="예: 메뉴2">
-                    </div>
+                    <p class="ladder-hint">최대 12개까지 선택할 수 있습니다.</p>
                 </div>
-                <button class="btn ghost small" id="ladder-manual">사다리게임(수동)</button>
+                <div class="ladder-input-group">
+                    <div class="ladder-input-header">
+                        <span>사다리 위(시작)</span>
+                    </div>
+                    <div class="ladder-input-list" id="ladder-top-list"></div>
+                </div>
+                <div class="ladder-input-group">
+                    <div class="ladder-input-header">
+                        <span>사다리 아래(도착)</span>
+                    </div>
+                    <div class="ladder-input-list" id="ladder-bottom-list"></div>
+                </div>
+                <button class="btn ghost small" id="ladder-manual">수동 사다리 만들기</button>
             </div>
             <div class="ladder-controls">
                 <button class="btn outline" id="ladder-reroll">사다리 다시 만들기</button>
