--- a/index.html
+++ b/index.html
@@ -137,35 +137,43 @@
             </div>
             <p class="modal-desc" id="ladder-desc">시작 지점을 눌러 메뉴 결과를 확인하세요.</p>
             <div class="ladder-inputs">
-                <div class="ladder-input-group">
-                    <div class="ladder-input-header">
-                        <span>자동 카테고리</span>
-                        <select class="ladder-select" id="ladder-category" aria-label="자동 사다리 카테고리"></select>
+                <div class="ladder-mode">
+                    <button class="btn ghost ladder-mode-btn is-active" type="button" data-ladder-mode="auto">자동</button>
+                    <button class="btn ghost ladder-mode-btn" type="button" data-ladder-mode="manual">수동</button>
+                </div>
+                <div class="ladder-section" data-ladder-section="auto">
+                    <div class="ladder-input-group">
+                        <div class="ladder-input-header">
+                            <span>자동 카테고리</span>
+                            <select class="ladder-select" id="ladder-category" aria-label="자동 사다리 카테고리"></select>
+                        </div>
+                    </div>
+                    <div class="ladder-controls">
+                        <button class="btn outline" id="ladder-reroll">사다리 다시 만들기</button>
                     </div>
                 </div>
-                <div class="ladder-input-group">
-                    <div class="ladder-input-header">
-                        <span>수동 게임 수</span>
-                        <select class="ladder-select" id="ladder-count" aria-label="수동 사다리 게임 수"></select>
+                <div class="ladder-section is-hidden" data-ladder-section="manual">
+                    <div class="ladder-input-group">
+                        <div class="ladder-input-header">
+                            <span>수동 게임 수</span>
+                            <select class="ladder-select" id="ladder-count" aria-label="수동 사다리 게임 수"></select>
+                        </div>
+                        <p class="ladder-hint">최대 12개까지 선택할 수 있습니다.</p>
                     </div>
-                    <p class="ladder-hint">최대 12개까지 선택할 수 있습니다.</p>
-                </div>
-                <div class="ladder-input-group">
-                    <div class="ladder-input-header">
-                        <span>사다리 위(시작)</span>
+                    <div class="ladder-input-group">
+                        <div class="ladder-input-header">
+                            <span>사다리 위(시작)</span>
+                        </div>
+                        <div class="ladder-input-list" id="ladder-top-list"></div>
                     </div>
-                    <div class="ladder-input-list" id="ladder-top-list"></div>
-                </div>
-                <div class="ladder-input-group">
-                    <div class="ladder-input-header">
-                        <span>사다리 아래(도착)</span>
+                    <div class="ladder-input-group">
+                        <div class="ladder-input-header">
+                            <span>사다리 아래(도착)</span>
+                        </div>
+                        <div class="ladder-input-list" id="ladder-bottom-list"></div>
                     </div>
-                    <div class="ladder-input-list" id="ladder-bottom-list"></div>
+                    <button class="btn ghost small" id="ladder-manual">수동 사다리 만들기</button>
                 </div>
-                <button class="btn ghost small" id="ladder-manual">수동 사다리 만들기</button>
-            </div>
-            <div class="ladder-controls">
-                <button class="btn outline" id="ladder-reroll">사다리 다시 만들기</button>
             </div>
             <div class="ladder-board">
                 <div class="ladder-labels ladder-top" id="ladder-top"></div>
