로또 기본 한글/다크 및 애니메이션 강화

--- a/lotto.html
+++ b/lotto.html
@@ -6,7 +6,7 @@
     <title>Lotto Number Studio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="theme-light">
+<body class="theme-dark">
     <div class="page">
         <header class="hero">
             <div class="hero-copy">
@@ -22,15 +22,15 @@
                     <div class="control-group">
                         <span class="control-label" data-i18n="language">Language</span>
                         <div class="control-buttons">
-                            <button id="lang-ko" class="chip">한글</button>
-                            <button id="lang-en" class="chip is-active">English</button>
+                        <button id="lang-ko" class="chip is-active">한글</button>
+                        <button id="lang-en" class="chip">English</button>
                         </div>
                     </div>
                     <div class="control-group">
                         <span class="control-label" data-i18n="theme">Theme</span>
                         <div class="control-buttons">
-                            <button id="theme-light" class="chip is-active" data-i18n="lightMode">Light</button>
-                            <button id="theme-dark" class="chip" data-i18n="darkMode">Dark</button>
+                        <button id="theme-light" class="chip" data-i18n="lightMode">Light</button>
+                        <button id="theme-dark" class="chip is-active" data-i18n="darkMode">Dark</button>
                         </div>
                     </div>
                     <div class="control-group">
