--- a/lotto.html
+++ b/lotto.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-5902400587011193">
     <title>Lotto Number Studio</title>
     <link rel="stylesheet" href="style.css">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5902400587011193"
+     crossorigin="anonymous"></script>
 </head>
 <body class="theme-dark">
     <div class="page">
