--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-5902400587011193">
+    <meta name="description" content="메뉴 추천, 사다리 게임, 저장 기능으로 오늘의 식사를 빠르게 정리하는 메뉴 추천 스튜디오입니다.">
+    <meta property="og:title" content="메뉴 추천 스튜디오">
+    <meta property="og:description" content="카테고리 필터, 사다리 게임, 저장 기능으로 오늘의 메뉴를 쉽고 빠르게 고르세요.">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ko_KR">
     <title>메뉴 추천 스튜디오</title>
     <link rel="stylesheet" href="menu.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5902400587011193"
@@ -12,7 +17,14 @@
 <body>
     <div class="page">
         <div class="top-actions">
-            <a class="btn ghost" href="lotto.html">로또 번호 생성</a>
+            <a class="brand-link" href="index.html">MENU LAB</a>
+            <nav class="site-nav">
+                <a class="nav-link" href="about.html">소개</a>
+                <a class="nav-link" href="lotto.html">로또 번호 생성</a>
+                <a class="nav-link" href="privacy.html">개인정보처리방침</a>
+                <a class="nav-link" href="terms.html">이용약관</a>
+                <a class="nav-link" href="contact.html">문의</a>
+            </nav>
         </div>
         <header class="hero">
             <div class="hero-copy">
@@ -48,6 +60,60 @@
                 </div>
             </div>
         </header>
+
+        <section class="site-info">
+            <div class="section-title">
+                <h3>서비스 소개</h3>
+                <p class="hint">오늘의 식사 고민을 줄여주는 간단하고 빠른 메뉴 추천 도구입니다.</p>
+            </div>
+            <div class="info-grid">
+                <article class="info-card">
+                    <h4>카테고리 필터</h4>
+                    <p>카테고리와 포함/제외 선택으로 선호도를 즉시 반영합니다.</p>
+                </article>
+                <article class="info-card">
+                    <h4>사다리 게임</h4>
+                    <p>자동/수동 사다리로 재밌게 메뉴를 결정할 수 있습니다.</p>
+                </article>
+                <article class="info-card">
+                    <h4>저장 & 다시 보기</h4>
+                    <p>좋았던 메뉴는 저장해두고 다음에도 쉽게 꺼내보세요.</p>
+                </article>
+            </div>
+        </section>
+
+        <section class="how-to">
+            <div class="section-title">
+                <h3>사용 방법</h3>
+                <p class="hint">3단계로 오늘의 메뉴를 결정합니다.</p>
+            </div>
+            <ol class="steps">
+                <li>카테고리를 선택하고 포함/제외 기준을 설정합니다.</li>
+                <li>추천 시작을 눌러 결과를 확인하거나 사다리 게임을 이용합니다.</li>
+                <li>마음에 드는 메뉴는 저장해 다음에 다시 확인합니다.</li>
+            </ol>
+        </section>
+
+        <section class="faq">
+            <div class="section-title">
+                <h3>FAQ</h3>
+                <p class="hint">자주 묻는 질문을 정리했습니다.</p>
+            </div>
+            <div class="faq-list">
+                <details>
+                    <summary>추천 기준은 무엇인가요?</summary>
+                    <p>선택한 카테고리와 포함/제외 목록을 기반으로 무작위로 추천합니다.</p>
+                </details>
+                <details>
+                    <summary>사다리 게임은 몇 개까지 가능한가요?</summary>
+                    <p>자동은 카테고리에서 최대 12개, 수동은 사용자가 선택한 게임 수(최대 12개)로 진행됩니다.</p>
+                </details>
+                <details>
+                    <summary>광고 및 데이터는 어떻게 처리되나요?</summary>
+                    <p>광고 관련 정보는 개인정보처리방침에 안내된 범위에서 처리됩니다.</p>
+                </details>
+            </div>
+        </section>
 
         <section class="filters">
             <div class="filter-header">
@@ -126,6 +192,16 @@
             <p class="form-note is-hidden">응답 확인을 위해 이메일을 정확히 입력해 주세요.</p>
             <p class="partner-status is-hidden" id="partner-status" role="status" aria-live="polite"></p>
         </section>
+
+        <footer class="site-footer">
+            <div class="footer-links">
+                <a href="about.html">소개</a>
+                <a href="privacy.html">개인정보처리방침</a>
+                <a href="terms.html">이용약관</a>
+                <a href="contact.html">문의</a>
+            </div>
+            <p class="footer-meta">© 2024 MENU LAB. All rights reserved.</p>
+        </footer>
     </div>
 
     <div class="modal" id="ladder-modal" aria-hidden="true" role="dialog" aria-modal="true">
