--- a/lotto.html
+++ b/lotto.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-adsense-account" content="ca-pub-5902400587011193">
+    <meta name="description" content="자동/수동으로 로또 번호를 생성하고 관리할 수 있는 로또 번호 스튜디오입니다.">
+    <meta property="og:title" content="로또 번호 스튜디오">
+    <meta property="og:description" content="게임 수를 선택해 자동 또는 수동으로 로또 번호를 생성하세요.">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ko_KR">
     <title>Lotto Number Studio</title>
     <link rel="stylesheet" href="style.css">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5902400587011193"
@@ -11,6 +16,16 @@
 </head>
 <body class="theme-dark">
     <div class="page">
+        <div class="top-actions">
+            <a class="brand-link" href="index.html">MENU LAB</a>
+            <nav class="site-nav">
+                <a class="nav-link" href="about.html">소개</a>
+                <a class="nav-link" href="index.html">메뉴 추천</a>
+                <a class="nav-link" href="privacy.html">개인정보처리방침</a>
+                <a class="nav-link" href="terms.html">이용약관</a>
+                <a class="nav-link" href="contact.html">문의</a>
+            </nav>
+        </div>
         <header class="hero">
             <div class="hero-copy">
                 <span class="badge">LOTTO STUDIO</span>
@@ -53,6 +68,45 @@
         <section class="game-section">
             <div id="games" class="game-grid"></div>
         </section>
+
+        <section class="info-section">
+            <div class="section-title">
+                <h3>사용 방법</h3>
+                <p class="hint">자동/수동으로 빠르게 번호를 만들 수 있습니다.</p>
+            </div>
+            <ol class="steps">
+                <li>게임 수를 선택합니다.</li>
+                <li>자동 버튼으로 번호를 생성하거나 수동으로 6개 숫자를 선택합니다.</li>
+                <li>생성된 번호를 확인하고 필요하면 다시 생성합니다.</li>
+            </ol>
+        </section>
+
+        <section class="info-section">
+            <div class="section-title">
+                <h3>FAQ</h3>
+                <p class="hint">자주 묻는 질문을 확인하세요.</p>
+            </div>
+            <div class="faq-list">
+                <details>
+                    <summary>자동 번호는 어떻게 생성되나요?</summary>
+                    <p>1~45 사이의 숫자에서 중복 없이 6개를 무작위로 선택합니다.</p>
+                </details>
+                <details>
+                    <summary>수동 선택 시 제한이 있나요?</summary>
+                    <p>6개 번호를 선택해야 하며, 초과 선택은 제한됩니다.</p>
+                </details>
+            </div>
+        </section>
+
+        <footer class="site-footer">
+            <div class="footer-links">
+                <a href="about.html">소개</a>
+                <a href="privacy.html">개인정보처리방침</a>
+                <a href="terms.html">이용약관</a>
+                <a href="contact.html">문의</a>
+            </div>
+            <p class="footer-meta">© 2024 MENU LAB. All rights reserved.</p>
+        </footer>
     </div>
 
     <div class="modal" id="manual-modal" aria-hidden="true">
