콘텐츠 축소 및 하단 정리

--- a/about.html
+++ b/about.html
@@ -23,37 +23,27 @@
         <header class="simple-hero">
             <span class="badge">ABOUT</span>
             <h1>MENU LAB 소개</h1>
-            <p>메뉴 선택과 로또 번호 생성을 빠르게 도와주는 실용적인 도구 모음입니다.</p>
+            <p>간단한 선택 도구 모음</p>
         </header>
 
         <section class="content-block">
-            <h2>서비스 특징</h2>
-            <ul class="content-list">
-                <li>카테고리 기반 메뉴 추천과 사다리 게임으로 빠른 결정 지원</li>
-                <li>자동/수동 로또 번호 생성으로 다양한 선택 옵션 제공</li>
-                <li>간결한 인터페이스와 모바일 친화적인 UX</li>
-            </ul>
-        </section>
-
-        <section class="content-block">
-            <h2>사용 방법</h2>
-            <ol class="steps">
-                <li>메뉴 추천 페이지에서 카테고리를 고르고 추천을 시작합니다.</li>
-                <li>사다리 게임을 사용해 재미있게 메뉴를 결정합니다.</li>
-                <li>로또 페이지에서는 게임 수를 선택하고 자동/수동으로 번호를 생성합니다.</li>
-            </ol>
-        </section>
-
-        <section class="content-block">
-            <h2>FAQ</h2>
+            <h2>요약</h2>
             <div class="faq-list">
                 <details>
-                    <summary>추천 결과는 저장되나요?</summary>
-                    <p>브라우저에서 저장 기능을 사용하면 저장된 메뉴를 바로 확인할 수 있습니다.</p>
+                    <summary>서비스 특징</summary>
+                    <ul class="content-list">
+                        <li>카테고리 기반 메뉴 추천</li>
+                        <li>사다리 게임 지원</li>
+                        <li>자동/수동 로또 번호 생성</li>
+                    </ul>
                 </details>
                 <details>
-                    <summary>사다리 게임은 어떻게 동작하나요?</summary>
-                    <p>선택한 메뉴 또는 수동 입력값을 기반으로 랜덤 사다리를 생성합니다.</p>
+                    <summary>사용 방법</summary>
+                    <ol class="steps">
+                        <li>카테고리를 선택합니다.</li>
+                        <li>추천 또는 사다리 게임을 실행합니다.</li>
+                        <li>로또 페이지에서 번호를 생성합니다.</li>
+                    </ol>
                 </details>
             </div>
         </section>
