--- a/contact.html
+++ b/contact.html
@@ -23,15 +23,8 @@
         <header class="simple-hero">
             <span class="badge">CONTACT</span>
             <h1>문의</h1>
-            <p>서비스 관련 문의는 아래 채널을 통해 전달해 주세요.</p>
+            <p>간단한 문의 폼</p>
         </header>
-
-        <section class="content-block">
-            <h2>문의 채널</h2>
-            <ul class="content-list">
-                <li>운영 시간: 평일 10:00 - 18:00 (KST)</li>
-            </ul>
-        </section>
 
         <section class="content-block">
             <h2>제휴 문의</h2>
