--- a/lotto.html
+++ b/lotto.html
@@ -30,7 +30,7 @@
             <div class="hero-copy">
                 <span class="badge">LOTTO STUDIO</span>
                 <h1 data-i18n="title">Lotto Number Studio</h1>
-                <p data-i18n="subtitle">Design your picks with fast auto draws or precise manual selection.</p>
+                <p data-i18n="subtitle">빠르게 번호를 생성하세요.</p>
                 <div class="hero-actions">
                     <a class="chip" href="index.html">메뉴 추천으로</a>
                 </div>
@@ -72,28 +72,26 @@
         <section class="info-section">
             <div class="section-title">
                 <h3>사용 방법</h3>
-                <p class="hint">자동/수동으로 빠르게 번호를 만들 수 있습니다.</p>
             </div>
             <ol class="steps">
                 <li>게임 수를 선택합니다.</li>
-                <li>자동 버튼으로 번호를 생성하거나 수동으로 6개 숫자를 선택합니다.</li>
-                <li>생성된 번호를 확인하고 필요하면 다시 생성합니다.</li>
+                <li>자동 또는 수동으로 번호를 생성합니다.</li>
+                <li>필요하면 다시 생성합니다.</li>
             </ol>
         </section>
 
         <section class="info-section">
             <div class="section-title">
                 <h3>FAQ</h3>
-                <p class="hint">자주 묻는 질문을 확인하세요.</p>
             </div>
             <div class="faq-list">
                 <details>
                     <summary>자동 번호는 어떻게 생성되나요?</summary>
-                    <p>1~45 사이의 숫자에서 중복 없이 6개를 무작위로 선택합니다.</p>
+                    <p>1~45 사이에서 중복 없이 6개를 선택합니다.</p>
                 </details>
                 <details>
                     <summary>수동 선택 시 제한이 있나요?</summary>
-                    <p>6개 번호를 선택해야 하며, 초과 선택은 제한됩니다.</p>
+                    <p>6개 번호를 선택해야 합니다.</p>
                 </details>
             </div>
         </section>
