--- a/privacy.html
+++ b/privacy.html
@@ -23,39 +23,36 @@
         <header class="simple-hero">
             <span class="badge">PRIVACY</span>
             <h1>개인정보처리방침</h1>
-            <p>MENU LAB은 서비스 제공을 위해 필요한 범위에서만 정보를 처리합니다.</p>
+            <p>필요한 범위에서만 처리합니다.</p>
         </header>
 
         <section class="content-block">
-            <h2>수집 항목</h2>
-            <ul class="content-list">
-                <li>문의 또는 제휴 요청 시: 이름, 이메일, 문의 내용</li>
-                <li>서비스 이용 과정에서 자동 수집될 수 있는 정보: 브라우저 정보, 접속 기록, 쿠키</li>
-            </ul>
-        </section>
-
-        <section class="content-block">
-            <h2>이용 목적</h2>
-            <ul class="content-list">
-                <li>문의 응대 및 서비스 개선</li>
-                <li>서비스 운영을 위한 통계 분석</li>
-                <li>광고 제공 및 측정을 위한 쿠키 사용(AdSense 포함)</li>
-            </ul>
-        </section>
-
-        <section class="content-block">
-            <h2>보관 및 파기</h2>
-            <p>수집된 정보는 목적 달성 후 지체 없이 파기하며, 관련 법령에 따라 필요한 기간 동안만 보관합니다.</p>
-        </section>
-
-        <section class="content-block">
-            <h2>광고 및 쿠키</h2>
-            <p>본 사이트는 Google AdSense를 포함한 광고 서비스를 이용할 수 있으며, 쿠키를 통해 개인 맞춤형 광고가 제공될 수 있습니다.</p>
-        </section>
-
-        <section class="content-block">
-            <h2>문의</h2>
-            <p>개인정보 관련 문의는 <a href="contact.html">문의 페이지</a>를 통해 접수해 주세요.</p>
+            <h2>요약</h2>
+            <div class="faq-list">
+                <details>
+                    <summary>수집 항목</summary>
+                    <ul class="content-list">
+                        <li>문의 시: 이름, 이메일, 문의 내용</li>
+                        <li>기술 정보: 브라우저, 접속 기록, 쿠키</li>
+                    </ul>
+                </details>
+                <details>
+                    <summary>이용 목적</summary>
+                    <ul class="content-list">
+                        <li>문의 응대 및 서비스 개선</li>
+                        <li>서비스 운영 분석</li>
+                        <li>광고 제공 및 측정(AdSense)</li>
+                    </ul>
+                </details>
+                <details>
+                    <summary>보관 및 파기</summary>
+                    <p>목적 달성 후 지체 없이 파기하며 법령에 따라 보관합니다.</p>
+                </details>
+                <details>
+                    <summary>문의</summary>
+                    <p>개인정보 관련 문의는 <a href="contact.html">문의 페이지</a>에서 접수합니다.</p>
+                </details>
+            </div>
         </section>
 
         <footer class="site-footer">
