--- a/terms.html
+++ b/terms.html
@@ -23,30 +23,32 @@
         <header class="simple-hero">
             <span class="badge">TERMS</span>
             <h1>이용약관</h1>
-            <p>MENU LAB 서비스 이용 시 적용되는 기본 약관입니다.</p>
+            <p>서비스 이용 기본 약관 요약</p>
         </header>
 
         <section class="content-block">
-            <h2>서비스 제공</h2>
-            <p>MENU LAB은 메뉴 추천 및 로또 번호 생성 기능을 제공합니다. 서비스 내용은 운영 정책에 따라 변경될 수 있습니다.</p>
-        </section>
-
-        <section class="content-block">
-            <h2>이용자 책임</h2>
-            <ul class="content-list">
-                <li>서비스 이용 과정에서 법령 및 본 약관을 준수해야 합니다.</li>
-                <li>서비스 결과는 참고용이며, 최종 결정과 책임은 이용자에게 있습니다.</li>
-            </ul>
-        </section>
-
-        <section class="content-block">
-            <h2>지식재산권</h2>
-            <p>사이트 내 콘텐츠, 디자인, 데이터는 MENU LAB 또는 정당한 권리자에게 귀속됩니다.</p>
-        </section>
-
-        <section class="content-block">
-            <h2>면책</h2>
-            <p>MENU LAB은 서비스 이용 과정에서 발생한 손해에 대해 법령이 허용하는 범위 내에서 책임을 부담합니다.</p>
+            <h2>요약</h2>
+            <div class="faq-list">
+                <details>
+                    <summary>서비스 제공</summary>
+                    <p>메뉴 추천 및 로또 번호 생성 기능을 제공합니다.</p>
+                </details>
+                <details>
+                    <summary>이용자 책임</summary>
+                    <ul class="content-list">
+                        <li>법령 및 약관 준수</li>
+                        <li>최종 결정 책임은 이용자에게 있음</li>
+                    </ul>
+                </details>
+                <details>
+                    <summary>지식재산권</summary>
+                    <p>콘텐츠와 디자인은 MENU LAB 또는 권리자에게 귀속됩니다.</p>
+                </details>
+                <details>
+                    <summary>면책</summary>
+                    <p>법령이 허용하는 범위 내에서 책임을 부담합니다.</p>
+                </details>
+            </div>
         </section>
 
         <footer class="site-footer">
