--- a/lotto.html
+++ b/lotto.html
@@ -20,10 +20,7 @@
             <a class="brand-link" href="index.html">MENU LAB</a>
             <nav class="site-nav">
                 <a class="nav-link" href="about.html">소개</a>
-                <a class="nav-link" href="index.html">메뉴 추천</a>
-                <a class="nav-link" href="privacy.html">개인정보처리방침</a>
-                <a class="nav-link" href="terms.html">이용약관</a>
-                <a class="nav-link" href="contact.html">문의</a>
+                <a class="nav-link" href="lotto.html">로또 번호 생성</a>
             </nav>
         </div>
         <header class="hero">
