--- a/about.html
+++ b/about.html
@@ -37,13 +37,45 @@
                         <li>자동/수동 로또 번호 생성</li>
                     </ul>
                 </details>
+            </div>
+        </section>
+
+        <section class="content-block">
+            <h2>메뉴 추천 사용 방법</h2>
+            <ol class="steps">
+                <li>카테고리를 선택하고 포함/제외를 설정합니다.</li>
+                <li>추천 시작 또는 사다리 게임을 실행합니다.</li>
+                <li>필요한 메뉴는 저장합니다.</li>
+            </ol>
+        </section>
+
+        <section class="content-block">
+            <h2>로또 번호 생성 사용 방법</h2>
+            <ol class="steps">
+                <li>게임 수를 선택합니다.</li>
+                <li>자동 또는 수동으로 번호를 생성합니다.</li>
+                <li>필요하면 다시 생성합니다.</li>
+            </ol>
+        </section>
+
+        <section class="content-block">
+            <h2>FAQ</h2>
+            <div class="faq-list">
                 <details>
-                    <summary>사용 방법</summary>
-                    <ol class="steps">
-                        <li>카테고리를 선택합니다.</li>
-                        <li>추천 또는 사다리 게임을 실행합니다.</li>
-                        <li>로또 페이지에서 번호를 생성합니다.</li>
-                    </ol>
+                    <summary>추천 기준은 무엇인가요?</summary>
+                    <p>선택한 카테고리와 포함/제외 목록을 기준으로 추천합니다.</p>
+                </details>
+                <details>
+                    <summary>사다리 게임은 몇 개까지 가능한가요?</summary>
+                    <p>자동은 최대 12개, 수동은 선택한 게임 수(최대 12개)로 진행됩니다.</p>
+                </details>
+                <details>
+                    <summary>자동 번호는 어떻게 생성되나요?</summary>
+                    <p>1~45 사이에서 중복 없이 6개를 선택합니다.</p>
+                </details>
+                <details>
+                    <summary>수동 선택 시 제한이 있나요?</summary>
+                    <p>6개 번호를 선택해야 합니다.</p>
                 </details>
             </div>
         </section>
